--- a/feature-libs/asm/package.json
+++ b/feature-libs/asm/package.json
@@ -29,11 +29,13 @@
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
     "@ng-select/ng-select": "^10.0.3",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/store": "^15.3.0",
     "@spartacus/cart": "5.0.0",
     "@spartacus/core": "5.0.0",
+    "@spartacus/order": "5.0.0",
     "@spartacus/schematics": "5.0.0",
     "@spartacus/storefinder": "5.0.0",
     "@spartacus/storefront": "5.0.0",
