added accessibility for table component (#16934)
* added accessibility for table component

* update comments

* fix for css RTL issue

* update tsconfig path

* update import path

* fix sonar issues

* sonar issue

* minor sonar issues

* code clearn up

* removed console

---------

Co-authored-by: Hakwoo Kim <hakwoo.kim@sap.com>

--- a/projects/storefrontapp/tsconfig.server.prod.json
+++ b/projects/storefrontapp/tsconfig.server.prod.json
@@ -5,6 +5,7 @@
     "paths": {
       "@spartacus/setup": ["../../dist/setup"],
       "@spartacus/setup/ssr": ["../../dist/setup/ssr"],
+      "@spartacus/asm/asm-customer-360": ["../../dist/asm/asm-customer-360"],
       "@spartacus/asm/assets": ["../../dist/asm/assets"],
       "@spartacus/asm/components": ["../../dist/asm/components"],
       "@spartacus/asm/core": ["../../dist/asm/core"],
